--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -1,10 +1,10 @@
-.signup {
+.dialog-user-details {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.signupForm {
+.userForm {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -13,6 +13,6 @@
     color: white;
 }
 
-.signupForm input {
+.userForm input {
     margin-bottom: 20px;
 }
